--- a/waiterbot_suite/waiterbot_ctrl_cafe/param/move_base/costmap_common_params.yaml
+++ b/waiterbot_suite/waiterbot_ctrl_cafe/param/move_base/costmap_common_params.yaml
@@ -14,9 +14,17 @@ z_resolution: 0.1
 z_voxels: 5
 publish_voxel_map: true
 
-observation_sources: kn_scan ir_scan vs_scan bumpers
+observation_sources: kn_scan ir_scan bumpers
 
-vs_scan: {data_type: LaserScan, topic: virtual_sensor_scan, marking: true, clearing: true, min_obstacle_height: 0.3, max_obstacle_height: 0.8}
-kn_scan: {data_type: LaserScan, topic:                scan, marking: true, clearing: true, min_obstacle_height: 0.148, max_obstacle_height: 0.3}
+# Virtual sensor is currently not being used.
+#V2 vs_scan: {data_type: LaserScan, topic: virtual_sensor_scan, marking: true, clearing: true, min_obstacle_height: 0.5, max_obstacle_height: 0.8}
+#V1 vs_scan: {data_type: LaserScan, topic: virtual_sensor_scan, marking: true, clearing: true, min_obstacle_height: 0.3, max_obstacle_height: 0.8}
+
+# 3d sensor on Waiterbot V2 is higher than turtlebot. Max obstacle height should be higher
+kn_scan: {data_type: LaserScan, topic:                scan, marking: true, clearing: true, min_obstacle_height: 0.148, max_obstacle_height: 0.5}
+
+# Waiterbot v1 kinect configuration
+#kn_scan: {data_type: LaserScan, topic:                scan, marking: true, clearing: true, min_obstacle_height: 0.148, max_obstacle_height: 0.3}
+
 ir_scan: {data_type: LaserScan, topic:             ir_scan, marking: true, clearing: true, min_obstacle_height: 0.1, max_obstacle_height: 0.2}
 bumpers: {data_type: PointCloud2, topic: /mobile_base/sensors/bumper_pointcloud, marking: true, clearing: true, min_obstacle_height: 0.0, max_obstacle_height: 0.1}
