--- a/waiterbot_suite/waiterbot_ctrl_cafe/param/move_base/move_base_params.yaml
+++ b/waiterbot_suite/waiterbot_ctrl_cafe/param/move_base/move_base_params.yaml
@@ -13,6 +13,9 @@ planner_patience: 5.0
 oscillation_timeout: 10.0
 oscillation_distance: 0.2
 
+# local planner - default is trajectory rollout
+base_local_planner: "dwa_local_planner/DWAPlannerROS"
+
 # Waiterbot recovery behaviors; we avoid spinning, but we need a fall-back replanning
 recovery_behaviors:
   - name: 'super_conservative_reset'
