--- a/waiterbot_suite/waiterbot_ctrl_cafe/param/move_base/dwa_local_planner_params.yaml
+++ b/waiterbot_suite/waiterbot_ctrl_cafe/param/move_base/dwa_local_planner_params.yaml
@@ -1,7 +1,7 @@
 DWAPlannerROS:
 
 # Robot Configuration Parameters
-  max_vel_x: 0.3  # 0.55
+  max_vel_x: 0.55 #0.3  # 0.55
   min_vel_x: 0.0  # 0.0
 
   max_vel_y: 0.0  # diff drive robot
@@ -9,8 +9,10 @@ DWAPlannerROS:
 
   # max_trans_vel: 0.55
   # min_trans_vel: 0.1
+  max_trans_vel: 0.55
+  min_trans_vel: 0.0
 
-  max_rot_vel: 1.0 
+  max_rot_vel: 1.5  # 1.0
   min_rot_vel: 0.4  # could set this lower
   # DEPRECATED? min_in_place_vel_theta: 0.6  # TrajectoryPlannerRos
   
