--- a/waiterbot_suite/waiterbot_ctrl_cafe/param/vel_smoother.yaml
+++ b/waiterbot_suite/waiterbot_ctrl_cafe/param/vel_smoother.yaml
@@ -3,15 +3,18 @@
 # which runs on top.
 
 # Mandatory parameters
-speed_lim_v: 0.25
-speed_lim_w: 1.0
+#speed_lim_v: 0.25
+speed_lim_v: 0.55
+#speed_lim_w: 1.0
+speed_lim_w: 1.5
 
 accel_lim_v: 0.2
 accel_lim_w: 1.0
 
 # Optional parameters
 frequency: 20.0
-decel_factor: 1.5
+decel_factor: 2.0
+#decel_factor: 1.5
 
 # Robot velocity feedback type:
 #  0 - none 
