--- a/waiterbot_suite/waiterbot_ctrl_cafe/param/move_base/dwa_local_planner_params.yaml
+++ b/waiterbot_suite/waiterbot_ctrl_cafe/param/move_base/dwa_local_planner_params.yaml
@@ -1,22 +1,23 @@
+#### Warning! Many configurations are adopted from turtlebot_navigation default parameter
+
 DWAPlannerROS:
 
 # Robot Configuration Parameters
-  max_vel_x: 0.5  #0.3  # 0.55
+  max_vel_x: 0.5  #0.3  # 0.5
   min_vel_x: 0.0  # 0.0
 
   max_vel_y: 0.0  # diff drive robot
   min_vel_y: 0.0  # diff drive robot
 
-  # max_trans_vel: 0.55
-  # min_trans_vel: 0.1
   max_trans_vel: 0.5
-  min_trans_vel: 0.0
+  min_trans_vel: 0.1
+  trans_stopped_vel: 0.1
 
   max_rot_vel: 5.0  # 1.0
-  min_rot_vel: 0.4  # could set this lower
-  # DEPRECATED? min_in_place_vel_theta: 0.6  # TrajectoryPlannerRos
+  min_rot_vel: 0.6  # could set this lower
+  rot_stopped_vel: 0.6
   
-  acc_lim_x: 2.0 
+  acc_lim_x: 2.0
   acc_lim_theta: 2.0 # 1.0 
   acc_lim_y: 0.0      # diff drive robot
 
@@ -26,15 +27,15 @@ DWAPlannerROS:
   # latch_xy_goal_tolerance: false
 
 # Forward Simulation Parameters
-  sim_time: 3.0       # 1.7
+  sim_time: 1.0       # 1.7
   vx_samples: 6       # 3
-  vy_samples: 0       # diff drive robot
+  vy_samples: 1       # diff drive robot
   vtheta_samples: 20  # 20
 
 # Trajectory Scoring Parameters
-  path_distance_bias: 32.0      # 32.0   - weighting for how much it should stick to the global path plan
+  path_distance_bias: 64.0      # 32.0   - weighting for how much it should stick to the global path plan
   goal_distance_bias: 24.0      # 24.0   - wighting for how much it should attempt to reach its goal
-  occdist_scale: 0.51           # 0.01   - weighting for how much the controller should avoid obstacles
+  occdist_scale: 0.50           # 0.01   - weighting for how much the controller should avoid obstacles
   forward_point_distance: 0.325 # 0.325  - how far along to place an additional scoring point
   stop_time_buffer: 0.2         # 0.2    - amount of time a robot must stop in before colliding for a valid traj.
   scaling_speed: 0.25           # 0.25   - absolute velocity at which to start scaling the robot's footprint
