--- a/waiterbot_suite/waiterbot_navigation/CMakeLists.txt
+++ b/waiterbot_suite/waiterbot_navigation/CMakeLists.txt
@@ -11,3 +11,4 @@ catkin_package(
 #  DEPENDS system_lib
 )
 
+catkin_add_env_hooks(25.waiterbot-navigation SHELLS sh DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/env-hooks)
