--- a/waiterbot_suite/waiterbot_navigation/param/ir_costmap_params.yaml
+++ b/waiterbot_suite/waiterbot_navigation/param/ir_costmap_params.yaml
@@ -1,9 +1,21 @@
-obstacle_layer:
-  observation_sources: ir_scan
-  ir_scan:
-    data_type: LaserScan
-    topic: ir_scan
-    marking: true
-    clearing: true
-    min_obstacle_height: 0.05
-    max_obstacle_height: 0.25 
+global_costmap:
+ obstacle_layer:
+   observation_sources: ir_scan
+   ir_scan:
+     data_type: LaserScan
+     topic: ir_scan
+     marking: true
+     clearing: true
+     min_obstacle_height: 0.05
+     max_obstacle_height: 0.25 
+local_costmap:
+ obstacle_layer:
+   observation_sources: ir_scan
+   ir_scan:
+     data_type: LaserScan
+     topic: ir_scan
+     marking: true
+     clearing: true
+     min_obstacle_height: 0.05
+     max_obstacle_height: 0.25
+
