--- a/waiterbot_suite/waiterbot_navigation/package.xml
+++ b/waiterbot_suite/waiterbot_navigation/package.xml
@@ -7,4 +7,6 @@
   <maintainer email="mehdi.tlili@gmail.com">Mehdi Tlili</maintainer>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <run_depend>turtlebot_navigation</run_depend>
+  <run_depend>waiterbot_sensors</run_depend> 
 </package>
