--- a/waiterbot_suite/waiterbot_navigation/param/ir_costmap_params.yaml
+++ b/waiterbot_suite/waiterbot_navigation/param/ir_costmap_params.yaml
@@ -1,6 +1,6 @@
 global_costmap:
  obstacle_layer:
-   observation_sources: ir_scan
+   observation_sources: ir_scan scan bump
    ir_scan:
      data_type: LaserScan
      topic: ir_scan
@@ -10,7 +10,7 @@ global_costmap:
      max_obstacle_height: 0.25 
 local_costmap:
  obstacle_layer:
-   observation_sources: ir_scan
+   observation_sources: ir_scan scan bump
    ir_scan:
      data_type: LaserScan
      topic: ir_scan
