--- a/waiterbot_rapps/CMakeLists.txt
+++ b/waiterbot_rapps/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(watierbot_rapps)
+project(waiterbot_rapps)
 
 find_package(catkin REQUIRED COMPONENTS)
 
