update pickup delivery rapp

--- a/waiterbot_rapps/package.xml
+++ b/waiterbot_rapps/package.xml
@@ -48,6 +48,10 @@
     <rocon_app>rapps/panorama/panorama.rapp</rocon_app>
     <rocon_app>rapps/follower/follower.rapp</rocon_app>
     <rocon_app>rapps/3dsensor/3dsensor.rapp</rocon_app>
+
+    <rocon_app>rapps/pickup_delivery/pickup_delivery.rapp</rocon_app>
+
+
   </export>
 
 </package>
